chandeliers-lus/tests/compile_fail/ui/tc/poly/undeclared-ext.rs
//! Undeclared type variable on extern node.
chandeliers_lus::decl! {
    extern node id(t0: T) returns (t1: T);
}

fn main() {}
