chandeliers-lus/tests/compile_fail/ui/tc/poly/undeclared-ext.stderr
error: Type variable T was not declared
 --> tests/compile_fail/ui/tc/poly/undeclared-ext.rs:3:24
  |
3 |     extern node id(t0: T) returns (t1: T);
  |                        ^
  |
  = note: Maybe add a `#[generic[T]]` annotation to the node ?
